--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
-    "compilerOptions": {
-      "target": "ES2021",
-      "lib": ["ES2021", "DOM"],
-      "module": "ESNext",
-      "moduleResolution": "Node",
-      "strict": true,
-      "jsx": "react-jsx",
-      "declaration": false,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
-      "baseUrl": ".",
-      "paths": {
-        "@common/*": ["src/common/*"]
-      },
-      "types": ["chrome"]
+  "compilerOptions": {
+    "target": "ES2021",
+    "lib": ["ES2021", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "jsx": "react-jsx",
+    "declaration": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@common/*": ["src/common/*"]
     },
-    "include": ["src/**/*", "manifest.json", "vite.config.ts"]
-  }
-  
+    "types": ["chrome", "node"]
+  },
+  "include": ["src/**/*", "manifest.json", "vite.config.ts"]
+}
