--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "description": "Check Mate – a Chrome extension to fact-check tweets with one click.",
-  "author": "o3 Assistant <support@openai.com>",
+  "author": "Sreekaran Srinath",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -40,7 +40,7 @@
     "prettier": "^3.2.5",
     "rollup-plugin-chrome-extension": "^3.6.12",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.8.3",
+    "typescript": "^5.3.3",
     "vite": "^5.4.18"
   },
   "engines": {
