--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.317",
+    "@types/chrome": "0.0.274",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
@@ -41,7 +41,7 @@
     "rollup-plugin-chrome-extension": "^3.6.12",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3",
-    "vite": "^5.4.18"
+    "vite": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
