--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,23 @@
   "description": "Debunk misinformation on Twitter/X with one click.",
   "version": "0.1.0",
   "action": {
-    "default_title": "Check Mate"
+    "default_title": "Check Mate",
+    "default_popup": "src/popup/popup.html",
+    "default_icon": {
+      "16": "src/assets/icon-16.png",
+      "32": "src/assets/icon-32.png",
+      "48": "src/assets/icon-48.png",
+      "128": "src/assets/icon-128.png"
+    }
   },
   "icons": {
     "16": "public/icons/knight_16.png",
     "32": "public/icons/knight_32.png",
     "128": "public/icons/knight_128.png"
+  },
+  "options_ui": {
+    "page": "src/options/options.html",
+    "open_in_tab": true
   },
   "background": {
     "service_worker": "src/background/index.ts",
