--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "action": {
     "default_title": "Check Mate",
-    "default_popup": "src/popup/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "src/assets/icon-16.png",
       "32": "src/assets/icon-32.png",
