--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write .",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "prepare": "husky install"
   },
   "dependencies": {
+    "p-limit": "^6.2.0",
+    "p-retry": "^6.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.52.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/chrome": "0.0.274",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
@@ -36,10 +49,14 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "rollup-plugin-chrome-extension": "^3.6.12",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^6.3.3"
   },
