--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     "types": ["chrome", "node"],
     "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src/**/*", "manifest.json", "vite.config.ts"]
+  "include": [
+    "src/**/*",
+    "manifest.json",
+    "vite.config.ts",
+    "e2e/**/*",
+    "jest.setup.ts"
+  ]
 }
