--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "p-limit": "^6.2.0",
     "p-retry": "^6.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
