--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,17 @@
     "default_title": "Check Mate",
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "src/assets/icon-16.png",
-      "32": "src/assets/icon-32.png",
-      "48": "src/assets/icon-48.png",
-      "128": "src/assets/icon-128.png"
+      "16": "public/icons/icon-16.png",
+      "32": "public/icons/icon-32.png",
+      "48": "public/icons/icon-48.png",
+      "128": "public/icons/icon-128.png"
     }
   },
   "icons": {
-    "16": "public/icons/knight_16.png",
-    "32": "public/icons/knight_32.png",
-    "128": "public/icons/knight_128.png"
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "options_ui": {
     "page": "src/options/options.html",
