--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "rollup-plugin-chrome-extension": "^3.6.12",
+    "sharp": "^0.34.1",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
